syntax = "proto3";

import "transaction_status_core.proto";
import "transaction_status_db.proto";

package transaction_status.service.v1;
option go_package = "./pb";

// #region General Request and Reuseable

message Pagination {
    int32 limit = 1;
    int32 page = 2;
    string sort = 3;
    Direction dir = 4;
    uint64 total_pages = 5;
    uint64 total_rows = 6;
    string filter = 7;
};
 
message GeneralBodyResponse {
    string process_id = 1;
    bool error = 2;
    uint32 code = 3;
    string message = 4;
};

// #endregion
// #region Utils Request & Response

message HealthCheckResponse {
    string message = 1;
};

message UserAuthority {
    bool isMaker = 1;
    bool isChecker = 2;
    bool isSigner = 3;
    bool isReleaser = 4;
};

message RegisterJobTransactionPendingeRequest {
    string key = 1;
}

message RegisterJobTransactionPendingResponse {
    bool error = 1;
    uint32 code = 2;
    string message = 3;
}

// #endregion
message massageRabbitPublish {
    uint64 id_job = 1;
    uint64 task_id = 2;
}

message UpdatedJobTransactionStatusRequest {
    uint64 id_job = 1;
    uint64 task_id = 2;
    statusInquiryJob status = 3;
}

message UpdatedJobTransactionStatusResponse {
    bool error = 1;
    uint32 code = 2;
    string message = 3;
}